--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Testing TodoMVC using Cypress",
   "scripts": {
-    "start": "./node_modules/.bin/json-server --static . data.json -m middleware.js --config json-server.json"
+    "start": "json-server --static . data.json -m middleware.js --config json-server.json",
+    "cypress:open": "cypress open"
   },
   "devDependencies": {
-    "json-server": "0.15.1",
-    "sendmail": "^1.6.1"
+    "cypress": "^13.6.1",
+    "json-server": "^0.17.4",
+    "sendmail": "^1.6.1",
+    "typescript": "^5.3.3"
   }
 }
