--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Cypress.io
-        uses: cypress-io/github-action@2.9.7
+        uses: cypress-io/github-action@v6
         with:
           start: npm start
